--- a/src/html/main.css
+++ b/src/html/main.css
@@ -75,33 +75,33 @@ a.active{
   overflow-x: hidden;
 }
 
-canvas {
+#canvas-webgpu {
   width: 100%;
   height: 100%;
 }
 
 #gui {
   position: absolute;
-  right: -0.3em;
-  top: 0.7em;
+  right: -0.7em;
+  top: 0.3em;
   z-index: 1000;
 }
 
 #stats {
   position: absolute;
-  left: -0.3em;
-  top: 0.7em;
+  left: 315px;
+  top: 0.3em;
   z-index: 1000;
 }
 
 .fps {
-position: absolute;
-bottom: 0;
-right: 0;
-color: white;
-font-size: small;
-width: 220px;
-z-index: 1000;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  color: white;
+  font-size: small;
+  width: 220px;
+  z-index: 1000;
 }
 
 
